# diagonal-go

./: .gitignore  CMakeLists.txt  README.md  eval.ipynb  main.cpp
my_parallel/: CmakeLists.txt  atomic_list.hpp  fragment.hpp  one_dim_point_tree.hpp  optimizer_concurrent_queue.hpp  plane.hpp  point_tree.hpp
parallel_naive/: CMakeLists.txt  parallel_naive.cpp  parallel_naive.hpp
sequential/: CMakeLists.txt  fragment.h  fragment.hpp  fragment.tpp  map_plane  map_plane.hpp  one_dim_point_tree.hpp  optimizer.h  optimizer.hpp  optimizer.tpp  plane.h  plane.hpp  plane.tpp  point_tree.hpp  tree_plane
tests/: CMakeLists.txt  test.hpp  tests.hpp
